--- a/second.html
+++ b/second.html
@@ -28,6 +28,15 @@
 
     <!-- <h1 id="firstH1">This is our css styled heading</h1> -->
 
+    <section>
+        <div id="heroImage">
+            <h1 id="heroTitle">Happy shopping</h1>
+        </div>
+        <!-- <img src="./image/hero.jpg" id="heroImage" /> -->
+        
+    </section>
+
+
 
     <div id="div1">
         <h2 id="subHeading">QWERTY</h2>
@@ -44,5 +53,9 @@
 
 
 </body>
+<!-- git clone https://github.com/Ammar204/areeb_tution.git -->
+<!-- git add . -->
+<!-- git commit -m "homework2" -->
+<!-- git push origin master -->
 
 </html>
