--- a/position.html
+++ b/position.html
@@ -21,6 +21,7 @@
           font-size: 60px;
           text-align: center;
           color: beige; 
+          min-width : 250px
         }
         .first{
             background-color: brown;
@@ -42,6 +43,12 @@
             /* justify-content: center;
             align-items: center; */
         }
+        .test-div{
+            display:flex;
+            width: 1000px;
+            background-color: black;
+            height: 50px;
+        }
     </style>
 </head>
 <body>
@@ -53,6 +60,9 @@
     <div class="div-box second" >2</div>
     <div class="div-box third" >3</div>
     <!-- <div class="div-box fourth" >4</div> -->
+</div>
+<div class="test-div">
+
 </div>
 </body>
 </html>
