--- a/myscript.html
+++ b/myscript.html
@@ -13,12 +13,12 @@
 
     </ul>
 
-    <div>
+    <!-- <div>
         <span id="sp">
             <p></p>
         </span>
         <button>Click</button>
-    </div>
+    </div> -->
    
 </body>
 <script src="myscript.js"></script>
